--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         
             </div>
     </div>
+    <audio src="./images/afeaf.mp3" autoplay="autoplay" loop="loop"></audio>
     </div>
 </body>
 <script src="./lib/swiper/js/swiper.js"></script>
