--- a/index.html
+++ b/index.html
@@ -1,62 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="./lib/swiper/css/swiper.css">
-    <link rel="stylesheet" href="./css/index.css">
-</head>
-<body>
-    <div class="container">
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112183323.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112183710.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112183719.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112183727.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112183732.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112183741.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112183750.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112183815.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112183825.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112183857.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112184033.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112184133.jpg" alt="">
-                </div>
-                <div class="swiper-slide">
-                    <img src="./images/QQ图片20180112184200.png" alt="">
-                </div>
-        
-            </div>
-    </div>
-    <audio src="./images/afeaf.mp3" autoplay="autoplay" loop="loop"></audio>
-    </div>
-</body>
-<script src="./lib/swiper/js/swiper.js"></script>
-<script src="./js/index.js"></script>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>React App</title><link href="/static/css/main.c17080f1.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.1a46913e.js"></script></body></html>
